<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagem2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/toggle_turn_off"
            android:textOn="@string/toggle_turn_on" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="auto completar texto"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/enter_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Spinner "
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/show_the_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/example_edittext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            '

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Pergunta sobre qualidade"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:text="mostrar popup"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:text="Excellent "
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:text="Satisfactory"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="fill_parent"
                    android:layout_height="37dp"
                    android:text="Below Average"
                    android:textSize="12sp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClear"
                    android:text="Clear "
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSubmit"
                    android:text="Submit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="Me pressione !!!!" />

                <Button
                    android:id="@+id/bt_segundaTela"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Segunda Tela"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/sportsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/sports_array" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>